tests/specs/check/compiler_options_paths_and_sloppy_imports/unmapped.out
error: Failed resolving types. Import "@unmapped/foo" via 'compilerOptions.paths["@unmapped/*"]' did not match an existing file
    at [WILDLINE]/unmapped.ts:1:21
