tests/specs/check/compiler_options_paths_and_sloppy_imports/unmapped.ts
import type {} from "@unmapped/foo";
